# NeoGet

./: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  software.json  tailwind.config.js  tsconfig.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
.github/workflows/: windows-tauri-build.yml
docs/: ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  DESIGN_SYSTEM.md  README.md  SETUP.md  TAURI_MIGRATION.md
src/: App.tsx  index.css  types.ts
src-tauri/: Cargo.toml  build.rs  neoget.exe.manifest  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: api.rs  commands.rs  lib.rs  main.rs
src/components/: CartDrawer.tsx  Header.tsx  InstallationOverlay.tsx  SoftwareGrid.tsx  index.ts
src/hooks/: useCart.ts  useInstallation.ts  useSystemStatus.ts  useTheme.ts
